--- a/style.css
+++ b/style.css
@@ -130,7 +130,6 @@ h1 {
 
 .g-input{
    background-color: #f2f2f2;
-   padding: 0.7rem;
    border: none;
    border-radius: 5px;
    cursor: pointer; 
@@ -154,7 +153,32 @@ h1 {
 p{
 font-size: 1.3rem;
 color: #ff9;
-padding: 1rem;
+padding-bottom: 1rem;
+text-align: center;
+}
+
+@media only screen and (min-width: 290px){
+    h1 {
+        font-size: 1.5rem;
+        padding: 0.5rem;
+    }
+    p{
+        font-size: 1rem;
+        color: #ff9;
+        /* padding-bottom: 1rem; */
+        }
+
+    .g-input{
+        padding: 0.5rem 0.2rem;
+}
+
+    #guess-btn{
+        padding: 0.5rem 0.5rem; 
+        border: none;
+        border-radius: 20px;
+    }
+
+
 }
 
 @media only screen and (min-width: 768px){
@@ -171,6 +195,7 @@ padding: 1rem;
             font-size: 2rem;
             padding-bottom: 3rem;
             text-align: center;
+            padding-top: 1rem;
             }
 
 
