--- a/style.css
+++ b/style.css
@@ -165,7 +165,8 @@ text-align: center;
     p{
         font-size: 1rem;
         color: #ff9;
-        /* padding-bottom: 1rem; */
+        padding-bottom: 2.5rem;
+        padding-top: 1rem;
         }
 
     .g-input{
